--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Bootcamp Portfolio</title>
 </head>
 <body>
-    
+<!-- Header -->
+<header>
+    <h1>Abigail Ross-Whichello's Portfolio</h1>
+    <p>This portfolio will be updated continously with finished coding projects and challenges</p>
+</header>
+<main>
+    <section class="image">
+        <header>About Me</header>
+    </section>
+    <section>
+        <header>Coding Projects and Challenges</header>
+    </section>
+    <section>
+        <header> Contact Information</header>
+    </section>
+</main>
 </body>
 </html>
