added code to style.css sheet

--- a/index.html
+++ b/index.html
@@ -1,27 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en-US">
+
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootcamp Portfolio</title>
-    <link rel="stylesheet"  href="style.css">
-</head>
-<body>
-<!-- Header -->
-<header>
-    <h1>Abigail Ross-Whichello's Portfolio</h1>
-    <p>This portfolio will be updated continously with finished coding projects and challenges</p>
-</header>
-<main>
-    <section class="image">
-        <header>About Me</header>
-    </section>
+    <title>CSS Box Model</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+  </head>
+
+  <body>
+    <header>
+      <h1>Abigail Ross-Whichello's Portfolio</h1>
+    </header>
+    
     <section>
-        <header>Coding Projects and Challenges</header>
+      <div class="content">
+        <h2>About Me: </h2>
+        <img class="Portrait" src="./assets/images/Photo1.jpg" alt="Photo of Me"/>
+        <h3>Hello, my name is Abigail. I am from Tampa, Florida and an alumni of UCF. I have a bachelors in education and I am working towards becoming a full stack web developer. I have a passion for learning and I look forward to continuing to build upon my coding skills. I have been expanding my knowlege of HTML, CSS, and Javascript and I am excited to share my projects with you!</h3>  
+      </div>
     </section>
+
     <section>
-        <header> Contact Information</header>
+      <div class="content">
+        <h2>My Work: </h2>
+        <img class="project" src="" alt=""/>
+        <img class="project" src="" alt=""/>
+        <img class="project" src="" alt=""/>
+        <img class="project" src="" alt=""/>
+        <h3>Filler</h3>
+      </div>
     </section>
-</main>
-</body>
+
+    <section>
+      <div class="content">
+        <h2>Contact Me:</h2>
+        <img class="" src="" alt="Email"/>
+        <img class="" src="" alt="Phone"/>
+        <h3>Email:</h3>
+        <h3>Phone Number:</h3>
+      </div>
+    </section>
+
+   
+      
+  </body>
+
 </html>
